k8s/retail-analytics-k8s.yaml
# =====================================================
# NetworkPolicy — só permite tráfego interno
# =====================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retail-analytics-netpol
spec:
  podSelector:
    matchLabels:
      app: retail-analytics
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - {}
